finallized swagger
